<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mikedmor.projecttap.RegistrationActivity">

            <TextView android:id="@+id/textView"
                android:text="@string/register_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText android:id="@+id/regUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:hint="@string/userid"
                android:singleLine="true" />

            <EditText android:id="@+id/regPASS"
                android:inputType="textWebPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regUID"
                android:hint="@string/password"
                android:singleLine="true" />

            <EditText android:id="@+id/regConPASS"
                android:inputType="textWebPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regPASS"
                android:hint="@string/conpassword"
                android:visibility="visible"
                android:singleLine="true" />

            <EditText android:id="@+id/regemail"
                android:inputType="textWebEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regConPASS"
                android:hint="@string/regemail"
                android:singleLine="true" />

            <EditText android:id="@+id/regbirth"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/regemail"
                android:layout_weight="1"
                android:hint="@string/regbirth"
                android:focusable="false"
                android:singleLine="true" />

            <Button android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_gravity="bottom|right"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true" />

</RelativeLayout>
